// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses correctly 1`] = `
<div>
  Number of Expenses: 
  3
  <br />
  Total expenses: 
  $1,141.95
</div>
`;

exports[`should render ExpensesSummary with no expenses correctly 1`] = `
<div>
  Number of Expenses: 
  0
  <br />
  Total expenses: 
  $0.00
</div>
`;
